ubiquity (2.9.31) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Fix misc.set_indicator_keymaps to handle ll_CC forms of lang, and also
    to avoid crashing on unknown languages in general (LP: #960047).

  [ Oliver Grawert ]
  * add support for automatic-oem-config kernel commandline option to the
    oem-config startup scripts to switch oem-config into automatic mode for
    preseeded oem installs
  * add an entry for the new option in oem-config-firstboot manpage

  [ Stéphane Graber ]
  * Properly mark the quit dialog as a child of ubiquity. (LP: #960375)

  [ James Hunt ]
  * scripts/install.py: Ignore mkdir failure if directory does (now)
    exist to accommodate update-apt-cache running in parallel with
    copy_all() (LP: #944191).

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 20 Mar 2012 15:15:31 -0400

ubiquity (2.9.30) precise; urgency=low

  [ Adam Conrad ]
  * Drop gui/qt/images/squares.png and replace it with a single pixel
    transparent PNG as a placeholder for future changes (LP: #942543)

  [ Evan Dandrea ]
  * Lazily unmount partitions in the check for a Windows partition to
    install Wubi on when we have a full partition table (LP: #956531).
  * Add a small program for testing the Gstreamer webcam code.
  * Fix broken test video output in the GI webcam module.

  [ Stéphane Graber ]
  * set_indicator_keymaps() doesn't actually receive a full locale but
    instead just the language code. That means that the code trying to
    guess a layout based on the default country won't work.
    Drop all of that code and replace by a static map to override the
    default keyboard layout/variant for a language. (LP: #956912)
  * Merge and update Alessio Treglia's branch to make the slideshow
    optional depending on (ubiquity/hide_slideshow) (LP: #690912)
  * Also call setxkbmap directly from set_indicator_keymaps() to ensure
    we actually switch to the first layout in the list. (LP: #956912)